# rust-flutter

./: .gitignore
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart  main_multi_window.dart  main_sample.dart  main_sidebar.dart  router.dart
flutter/lib/controller/: controllers.dart
flutter/lib/controller/search/: search_controller.dart
flutter/lib/model/: score.dart  user.dart
flutter/lib/view/: animation.dart  main_page.dart  menu_sidebar.dart  painter.dart  pie_chart.dart  second_page.dart
flutter/lib/view/cherry_blossom/: cherry_blossom.dart  cherry_blossom_loader.dart  cherry_blossom_painter.dart  cherry_blossom_petal.dart
flutter/lib/view/overlay/: alert.dart  easy_overlay.dart  overlay_example.dart  toast.dart
flutter/lib/view/search_bar/: SearchBar.dart  custom_email_dropdown.dart  text_field_dropdown_page.dart
flutter/lib/view/snow/: snow_fall.dart  snow_flake.dart  snow_painter.dart
flutter/test/: widget_test.dart
flutter/web/: index.html
flutter/windows/: CMakeLists.txt
rust/: .env  Cargo.toml
rust/src/: main.rs  user.rs
rust/src/api/: user.rs
