[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0.0-beta.8"
sqlx = {version="0.5", features=["mysql","runtime-tokio-rustls","macros"]}
dotenv = "0.15.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
env = "1.0.1"

[build-dependencies]
syn = "1"
